prototype for procss done

--- a/src/components/decorations/Cog.astro
+++ b/src/components/decorations/Cog.astro
@@ -33,7 +33,7 @@ const toothLength = size * 3;
     .tooth {
         height: 8px;
         width: 3px;
-        background: var(--text-color);
+        background-color: var(--text-color);
         border-radius: 20px;
     }
     .circle {
