--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,19 +12,21 @@ projects.sort((a, b) => b.data.relevance - a.data.relevance);
 ---
 
 <MainPage>
-    <section class="projects">
-        {projects.map((project) => (
-            <a class="project-card" href={`/project/${project.slug}`}>
-                <div class="project-cover-wrap">
-                    <Image src={project.data.cover} alt={project.data.title} class="project-cover" transition:name={`${project.slug} cover`} />
-                </div>
-                <h2 class="project-title" transition:name={`${project.slug} title`}>{project.data.title}</h2>
-                <p class="project-text">
-                    {project.data.description}
-                </p>
-            </a>
-        ))}
-    </section>
+    <main>
+        <section class="projects">
+            {projects.map((project) => (
+                <a class="project-card" href={`/project/${project.slug}`}>
+                    <div class="project-cover-wrap">
+                        <Image src={project.data.cover} alt={project.data.title} class="project-cover" transition:name={`${project.slug} cover`} />
+                    </div>
+                    <h2 class="project-title" transition:name={`${project.slug} title`}>{project.data.title}</h2>
+                    <p class="project-text">
+                        {project.data.description}
+                    </p>
+                </a>
+            ))}
+        </section>
+    </main>
 </MainPage>
 
 <script>
