better process page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -81,7 +81,7 @@ import Scroll from "../components/Scroll.astro";
 		}
 
 		body {
-			color: var(--text-color-1);
+			color: var(--text-color);
 			background: var(--background-1);
 			background-repeat: no-repeat;
 			background-size: cover;
@@ -91,6 +91,10 @@ import Scroll from "../components/Scroll.astro";
 		.body-wrap {
 			width: 100%;
 			overflow: hidden;
+		}
+
+		a {
+			color: var(--text-color);
 		}
 
 		#zoom-container {
