--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -9,16 +9,10 @@ import { Image } from "astro:assets";
 changeLanguage("en");
 
 setDefaultNamespace("process");
-
-import designImg from "../assets/process/design.jpg";
-import developImg from "../assets/process/develop.jpg";
-import experimentingImg from "../assets/process/experimenting.jpg";
-import researchImg from "../assets/process/research.jpg";
-import talkingImg from "../assets/process/talking.jpg";
 ---
 
 <MainPage>
-    <div class="grid-container">
+    <div id="process-container">
         <div class="project-box" slot="before-main">
             <div class="eater" />
             <div id="cog-1" class="cog-wrap">
@@ -56,15 +50,7 @@ import talkingImg from "../assets/process/talking.jpg";
                 <a href={localizePath('/about#contact')}>{t('general.end-cta')}</a>
             </div>
         </div>
-    
-        <div id="step-image">
-            <Image src={researchImg} alt="Man researching on a board" />
-            <Image src={talkingImg} alt="Two people talking on a bench" />
-            <Image src={experimentingImg} alt="Person experimenting with a plant" />
-            <Image src={designImg} alt="Colorful chalks" />
-            <Image src={developImg} alt="Person developing a website" />
-        </div>
-    
+
         <main>
             <section class="process-section">
                 <h2 id="step-1">{t('step-1.title')}</h2>
@@ -75,7 +61,7 @@ import talkingImg from "../assets/process/talking.jpg";
         
             <section class="process-section">
                 <h2 id="step-2" data-text-change={`${t('step-2.text-change')}`}>
-                    Step 2: Chatting
+                    {t('step-2.title')}
                 </h2>
                 <Fragment set:html={t('step-2.texts')} />
                 <Separator />
@@ -83,7 +69,7 @@ import talkingImg from "../assets/process/talking.jpg";
         
         
             <section class="process-section">
-                <h2 id="step-3" data-text-change={`${t('step-3.text-change')}`}>
+                <h2 id="step-3">
                     {t('step-3.title')}
                 </h2>
                 <Fragment set:html={t('step-3.texts')} />
@@ -92,7 +78,7 @@ import talkingImg from "../assets/process/talking.jpg";
         
         
             <section class="process-section">
-                <h2 id="step-4" data-text-change={`${t('step-4.text-change')}`}>
+                <h2 id="step-4">
                     {t('step-4.title')}
                 </h2>
                 <Fragment set:html={t('step-4.texts')} />
@@ -101,7 +87,7 @@ import talkingImg from "../assets/process/talking.jpg";
         
         
             <section class="process-section">
-                <h2 id="step-5" data-text-change={`${t('step-5.text-change')}`}>
+                <h2 id="step-5">
                     {t('step-5.title')}
                 </h2>
                 <Fragment set:html={t('step-5.texts')} />
@@ -121,11 +107,16 @@ import talkingImg from "../assets/process/talking.jpg";
 </script>
 
 <style>
+    #process-container {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
 	.project-box {
         position: relative;
         width: min(20rem, 90vw);
         height: 12rem;
-        margin: 5rem auto;
+        margin: 15vh 0;
         font-family: 'Courier New', monospace;
         display: flex;
         flex-direction: column;
@@ -195,10 +186,6 @@ import talkingImg from "../assets/process/talking.jpg";
         border: var(--line-width) solid var(--text-color);
     }
 
-    #step-image {
-        display: none;
-    }
-
     .process-section {
         display: flex;
         flex-direction: column;
@@ -209,8 +196,10 @@ import talkingImg from "../assets/process/talking.jpg";
     }
 
     h2 {
-        font-size: 2rem;
+        font-size: 3rem;
         text-align: center;
+        font-weight: 400;
+        font-family: "Roxie Rossa", serif;
     }
 
     :global(.process-section p) {
@@ -223,33 +212,23 @@ import talkingImg from "../assets/process/talking.jpg";
     }
 
     @media screen and (min-width: 1100px){
-        .grid-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 30rem 1fr;
-            gap: 2rem;
-        }
-        main {
-            grid-area: 2 / 1 / 3 / 2;
+        #process-container {
+            flex-direction: row-reverse;
+            align-items: flex-start;
+            justify-content: space-evenly;
         }
         .project-box {
-            grid-area: 1 / 2 / 2 / 3;
+            margin-top: 30vh;
         }
-        #step-image {
-            grid-area: 2 / 2 / 3 / 3;
-            display: block;
-            width: 100%;
-            height: 50vh;
+        .eater {
+            display: none;
         }
-        #step-image img {
-            position: absolute;
-            width: unset;
-            height: unset;
-            max-width: 90%;
-            max-height: 90%;
+
+        main {
+            padding-top: 60vh;
         }
         h2 {
-            font-size: 4rem;
+            font-size: 5rem;
             margin: 3rem auto;
         }
         .process-section {
