--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,7 +60,9 @@ import Scroll from "../components/Scroll.astro";
 		}
 
 		:root {
-			--primary-color: #5a795c;;
+			--primary-color: #3e503a;;
+			--primary-text-color: #cfdf7a;
+			--primary-gray: #d2d8d1;
 			--secondary-color: #e0bf29;
 			--background-1: #ffffff;
 			--background-2: #cddacd;
