--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -48,9 +48,7 @@ const pathname = Astro.site?.pathname;
         justify-items: center;
         align-items: center;
         column-gap: 1rem;
-
         overflow: hidden;
-        background-color: var(--primary-color);
         z-index: 10;
     }
 
@@ -61,6 +59,10 @@ const pathname = Astro.site?.pathname;
         padding: 1em;
         text-align: center;
         transition: transform .2s ease-in-out;
+        background: red;
+        -webkit-background-clip: text;
+        color: transparent;
+        -webkit-filter: invert();
     }
 
     .navigation a::after {
