better nav and colors

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -50,6 +50,7 @@ const pathname = Astro.site?.pathname;
         column-gap: 1rem;
         overflow: hidden;
         z-index: 10;
+        mix-blend-mode: difference;
     }
 
     .navigation a {
@@ -59,10 +60,8 @@ const pathname = Astro.site?.pathname;
         padding: 1em;
         text-align: center;
         transition: transform .2s ease-in-out;
-        background: red;
-        -webkit-background-clip: text;
-        color: transparent;
-        -webkit-filter: invert();
+        background-clip: text;
+        backdrop-filter: invert(1);
     }
 
     .navigation a::after {
