--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,10 +60,14 @@ import Scroll from "../components/Scroll.astro";
 		}
 
 		:root {
-			--primary-color: #3e503a;;
+			--primary-color: #3e503a;
 			--primary-text-color: #cfdf7a;
 			--primary-gray: #d2d8d1;
-			--secondary-color: #e0bf29;
+
+			--secondary-color: #3d3a50;
+			--secondary-text-color: #7ab2df;
+			--secondary-gray: #d1d6d8;
+
 			--background-1: #ffffff;
 			--background-2: #cddacd;
 			--text-color: #111;
