--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -110,6 +110,8 @@ setDefaultNamespace("process");
         display: flex;
         align-items: center;
         flex-direction: column;
+        background-color: var(--secondary-color);
+        --text-color: var(--secondary-gray);
     }
 	.project-box {
         position: relative;
@@ -199,6 +201,7 @@ setDefaultNamespace("process");
         text-align: center;
         font-weight: 400;
         font-family: "Roxie Rossa", serif;
+        color: var(--secondary-text-color);
     }
 
     :global(.process-section p) {
@@ -208,6 +211,7 @@ setDefaultNamespace("process");
         margin: 0 auto;
         margin-top: 5rem;
         text-align: center;
+        color: var(--secondary-gray);
     }
 
     @media screen and (min-width: 1100px){
