--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,9 +64,13 @@ import Scroll from "../components/Scroll.astro";
 			--primary-text-color: #cfdf7a;
 			--primary-gray: #d2d8d1;
 
-			--secondary-color: #3d3a50;
+			--secondary-color: #363b53;
 			--secondary-text-color: #7ab2df;
 			--secondary-gray: #d1d6d8;
+
+			--tertiary-color: #58151e;
+			--tertiary-text-color: #e0e0dc;
+			--tertiary-gray: #d2d8d1;
 
 			--background-1: #ffffff;
 			--background-2: #cddacd;
