--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -42,6 +42,7 @@ setDefaultNamespace("about");
         align-self: center;
         padding: 2rem;
         min-height: 100vh;
+        background-color: var(--tertiary-color);
     }
 
 	.profile-card {
