--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -110,6 +110,8 @@ setDefaultNamespace("process");
         display: flex;
         align-items: center;
         flex-direction: column;
+    }
+    main {
         background-color: var(--secondary-color);
         --text-color: var(--secondary-gray);
     }
@@ -117,7 +119,7 @@ setDefaultNamespace("process");
         position: relative;
         width: min(20rem, 90vw);
         height: 12rem;
-        margin: 15vh 0;
+        margin: 15vh auto;
         font-family: 'Courier New', monospace;
         display: flex;
         flex-direction: column;
@@ -218,7 +220,7 @@ setDefaultNamespace("process");
         #process-container {
             flex-direction: row-reverse;
             align-items: flex-start;
-            justify-content: space-evenly;
+            justify-content: flex-end;
         }
         .project-box {
             margin-top: 30vh;
@@ -226,16 +228,13 @@ setDefaultNamespace("process");
         .eater {
             display: none;
         }
-
         main {
             padding-top: 60vh;
+            width: 60%;
         }
         h2 {
             font-size: 5rem;
             margin: 3rem auto;
-        }
-        .process-section {
-            margin: 0 2rem;
         }
         :global(.process-section p) {
             max-width: 90vw;
