--- a/src/components/decorations/Cog.astro
+++ b/src/components/decorations/Cog.astro
@@ -32,12 +32,12 @@ const toothLength = size * 3;
     }
     .tooth {
         height: 8px;
-        width: 3px;
+        width: var(--line-width);
         background-color: var(--text-color);
         border-radius: 20px;
     }
     .circle {
-        border: solid 2px var(--text-color);
+        border: var(--line-width) solid var(--text-color);
         border-radius: 50%;
         width: 100%;
         height: 100%;
