--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -71,9 +71,9 @@ import MouseFollower from "../components/decorations/MouseFollower.astro";
 			--secondary-text-color: #7ab2df;
 			--secondary-gray: #d1d6d8;
 
-			--tertiary-color: #58151e;
-			--tertiary-text-color: #e0e0dc;
-			--tertiary-gray: #d2d8d1;
+			--tertiary-color: #aa4935;
+			--tertiary-text-color: #ececec;
+			--tertiary-gray: #eeece8d2;
 
 			--background-1: #ffffff;
 			--background-2: #cddacd;
@@ -107,7 +107,7 @@ import MouseFollower from "../components/decorations/MouseFollower.astro";
 		}
 
 		a {
-			color: var(--text-color);
+			color: inherit;
 		}
 
 		#zoom-container {
