--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,8 @@
 ---
-import { changeLanguage, setDefaultNamespace, t } from "i18next";
+import { changeLanguage, setDefaultNamespace } from "i18next";
 import MainPage from "../layouts/MainPage.astro";
-import { Image } from "astro:assets";
+import ProfileCard from "../components/about/ProfileCard.astro";
+import PersonnalityCard from "../components/about/PersonnalityCard.astro";
 
 changeLanguage("en");
 
@@ -9,63 +10,46 @@ setDefaultNamespace("about");
 ---
 
 <MainPage>
-    <main>
-        <div class="card profile-card">
-            <div class="profile-picture-wrap">
-            </div>
-            <div class="info">
-                <h3>Antoine Blumenroeder</h3>
-                <!-- Auto updating age -->
-                <p id="age"></p>
-                <script is:inline>
-                    const birthDate = new Date("2004-10-07");
-                    const age = Math.floor((new Date() - birthDate) / 31556952000);
-                    document.querySelector('#age').textContent = `Age: ${age}`;
-                </script>
-                <p>{t('profile.occupation')}</p>
-                <p>{t('profile.location')}</p>
-                <p><a href=`mailto:${t('profile.email')}`>{t('profile.email')}</a></p>
-            </div>
+    <main id="contact">
+        <div class="left">
+            <ProfileCard />
         </div>
-        <section>
-            <h2>Hello</h2>
-        </section>
+        <div class="right">
+            <PersonnalityCard />
+        </div>
     </main>
     
 </MainPage>
 
 <style>
     main {
-        display: grid;
-        gap: 2rem;
-        justify-content: center;
-        align-self: center;
-        padding: 2rem;
-        min-height: 100vh;
-        background-color: var(--tertiary-color);
-    }
-
-	.profile-card {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-        padding:  3rem;
-        border: var(--line-width) solid var(--text-color);
-        height: fit-content;
     }
-
-    .profile-picture-wrap {
-        width: 10rem;
-        height: 10rem;
-        border-radius: 50%;
-        overflow: hidden;
-        border: var(--line-width) solid var(--text-color);
-    }
-
-    .profile-picture {
+    .left {
         width: 100%;
-        height: 100%;
-        object-fit: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: var(--tertiary-gray);
+        background-color: var(--tertiary-color);
+    }
+    .right {
+        width: 100%;
+    }
+
+    @media screen and (min-width: 768px){
+        main {
+            flex-direction: row;
+        }
+        .left, .right {
+            height: 100vh;
+        }
+        .left {
+            width: 40%;
+        }
+        .right {
+            width: 60%;
+        }
     }
 </style>
